plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '3.2.4'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'org.sonarqube' version '5.1.0.4882'
    id 'idea'
}

group = 'ru.m_polukhin.debtsapp'
version = '0.1.0'
ext['testcontainers.version'] = '1.20.6'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

idea {
    module {
        downloadJavadoc = true
        downloadSources = true
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    integrationTestImplementation.extendsFrom testImplementation
    integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
}

configurations.matching { it.name.startsWith('integrationTest') }.all {
    resolutionStrategy.force(
            'org.testcontainers:testcontainers:1.20.6',
            'org.testcontainers:junit-jupiter:1.20.6',
            'org.testcontainers:postgresql:1.20.6',
            'org.testcontainers:neo4j:1.20.6',
            'org.testcontainers:jdbc:1.20.6',
            'org.testcontainers:database-commons:1.20.6'
    )
}

sourceSets {
    integrationTest {
        java.srcDirs = ['src/integrationTest/java']
        resources.srcDirs = ['src/integrationTest/resources']
        compileClasspath += sourceSets.main.output
        runtimeClasspath += output + sourceSets.main.output
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-neo4j'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.telegram:telegrambots-spring-boot-starter:6.9.7.1'

    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.liquibase:liquibase-core'
    implementation 'net.objecthunter:exp4j:0.4.8'

    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-validation'
    testImplementation 'org.apache.httpcomponents.client5:httpclient5'
    integrationTestImplementation 'org.springframework.boot:spring-boot-starter-test'
    integrationTestImplementation 'org.springframework.security:spring-security-test'
    integrationTestImplementation 'org.testcontainers:junit-jupiter:1.20.6'
    integrationTestImplementation 'org.testcontainers:postgresql:1.20.6'
    integrationTestImplementation 'org.testcontainers:neo4j:1.20.6'
    integrationTestImplementation 'org.springframework.boot:spring-boot-starter-validation'
    integrationTestImplementation 'org.apache.httpcomponents.client5:httpclient5'

}

jacoco {
    toolVersion = '0.8.11'
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, excludes: [
                '**/configs/**', '**/models/**', '**/dto/**',
                '**/exceptions/**', '**/*Application*',
            ])
        }))
    }
}

tasks.named('test') {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

tasks.register('integrationTest', Test) {
    description = 'Runs Docker-backed integration tests.'
    group = LifecycleBasePlugin.VERIFICATION_GROUP
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    shouldRunAfter tasks.named('test')
    useJUnitPlatform()
    systemProperty 'docker.api.version', '1.52'
    environment 'DOCKER_HOST', 'unix:///var/run/docker.sock'
    environment 'DOCKER_API_VERSION', '1.52'
    environment 'TESTCONTAINERS_DOCKER_SOCKET_OVERRIDE', '/var/run/docker.sock'
    environment 'TESTCONTAINERS_RYUK_DISABLED', 'true'
}
